--- a/openshift.yml
+++ b/openshift.yml
@@ -25,7 +25,7 @@ objects:
     annotations:
     labels:
       app: apicast
-    name: apicast-new-policies
+    name: apicast-new-policy
   spec:
     output:
       to:
